--- a/pokemon-teams-frontend/index.html
+++ b/pokemon-teams-frontend/index.html
@@ -11,7 +11,9 @@
     </header>
 
     <main>
-      <!-- Add our Pokemon -->
+      <div id="cards-collection"
+      
+      </div>
     </main>
 
     <script src="./src/index.js"></script>
